# libopaque-cmake

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: opaque.c  opaque.h
